--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ Here is my site to share my learning notes. On the one hand, I may be easy to re
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.b3215d9d1d18d9051e7fbe8f256ff80e30f41d29073b86348e230d297b771002.css" integrity="sha256-syFdnR0Y2QUef76PJW/4DjD0HSkHO4Y0jiMNKXt3EAI=">
-<script defer src="/en.search.min.82eab5cb18667c3681ce363803a97e4fe4aee916614a1f25026d5051912ca1de.js" integrity="sha256-guq1yxhmfDaBzjY4A6l&#43;T&#43;Su6RZhSh8lAm1QUZEsod4="></script>
+<script defer src="/en.search.min.bd3bcd64b5a1e680949b114cd719f6e63cb10af3c5aa1771a392a3fb842c1f99.js" integrity="sha256-vTvNZLWh5oCUmxFM1xn25jyxCvPFqhdxo5Kj&#43;4QsH5k="></script>
 <link rel="alternate" type="application/rss+xml" href="http://ispobock.github.io/index.xml" title="Here is Bock's Site" />
 <!--
 Made with Book Theme
