--- a/index.html
+++ b/index.html
@@ -16,7 +16,18 @@ Here is my site to share my learning notes. On the one hand, I may be easy to re
 <link rel="manifest" href="/manifest.json">
 <link rel="icon" href="/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="/book.min.b3215d9d1d18d9051e7fbe8f256ff80e30f41d29073b86348e230d297b771002.css" integrity="sha256-syFdnR0Y2QUef76PJW/4DjD0HSkHO4Y0jiMNKXt3EAI=">
-<script defer src="/en.search.min.bd3bcd64b5a1e680949b114cd719f6e63cb10af3c5aa1771a392a3fb842c1f99.js" integrity="sha256-vTvNZLWh5oCUmxFM1xn25jyxCvPFqhdxo5Kj&#43;4QsH5k="></script>
+<script defer src="/en.search.min.ce6c864af3cc29b90396bdcf3aa7a06f3f6d88167909f148a1d5276f064748ed.js" integrity="sha256-zmyGSvPMKbkDlr3POqegbz9tiBZ5CfFIodUnbwZHSO0="></script>
+
+<script type="application/javascript">
+var doNotTrack = false;
+if (!doNotTrack) {
+	window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
+	ga('create', 'UA-123-45', 'auto');
+	
+	ga('send', 'pageview');
+}
+</script>
+<script async src='https://www.google-analytics.com/analytics.js'></script>
 <link rel="alternate" type="application/rss+xml" href="http://ispobock.github.io/index.xml" title="Here is Bock's Site" />
 <!--
 Made with Book Theme
