--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ Here is my site to share my learning notes. On the one hand, I may be easy to re
 <meta name="theme-color" content="#FFFFFF"><meta property="og:title" content="Introduction" />
 <meta property="og:description" content="" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="http://ispobock.github.io/" />
+<meta property="og:url" content="https://ispobock.github.io/" />
 
 <title>Introduction | Here is Bock&#39;s Site</title>
 <link rel="manifest" href="/manifest.json">
@@ -26,7 +26,7 @@ Here is my site to share my learning notes. On the one hand, I may be easy to re
 
   gtag('config', 'UA-173469760-1');
 </script>
-<link rel="alternate" type="application/rss+xml" href="http://ispobock.github.io/index.xml" title="Here is Bock's Site" />
+<link rel="alternate" type="application/rss+xml" href="https://ispobock.github.io/index.xml" title="Here is Bock's Site" />
 <!--
 Made with Book Theme
 https://github.com/alex-shpak/hugo-book
