--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ https://github.com/alex-shpak/hugo-book
 </script>
 
   <meta name="google-site-verification" content="YxFBq0EqkV1Bbw9K7Q79ybR_H9diMtT5ExTcGP8gkAk" />
-  <meta name="baidu-site-verification" content="da6LceiNy8" />
+  <meta name="baidu-site-verification" content="XJChifQATr" />
 </head>
 
 <body dir=>
